# strawberry

./: CMakeLists.txt
src/: CMakeLists.txt  config.h.in
src/analyzer/: CMakeLists.txt  analyzercontainer.cpp
src/artistbio/: lastfmartistbio.cpp  wikipediaartistbio.cpp  wikipediaartistbio.h
src/collection/: CMakeLists.txt  collectionfilter.cpp  collectionfilterwidget.cpp  collectionmodel.cpp  collectionview.cpp  collectionviewcontainer.cpp
src/context/: CMakeLists.txt
src/core/: CMakeLists.txt  application.cpp  application.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  metatypes.cpp  player.cpp  player.h  playerinterface.h
src/covermanager/: CMakeLists.txt  albumcovermanager.cpp  albumcovermanagerlist.cpp
src/device/: CMakeLists.txt  deviceview.cpp
src/dialogs/: CMakeLists.txt  about.h  addstreamdialog.h  console.h  lastfmimportdialog.h  saveplaylistsdialog.h
src/edittagdialog/: CMakeLists.txt
src/engine/: CMakeLists.txt  gstengine.cpp  gstenginepipeline.cpp
src/equalizer/: CMakeLists.txt
src/fileview/: CMakeLists.txt  fileview.cpp  fileviewlist.cpp
src/filterparser/: CMakeLists.txt
src/globalshortcuts/: CMakeLists.txt  globalshortcutgrabber.cpp  globalshortcutgrabber.mm  globalshortcutsbackend-gnome.cpp  globalshortcutsbackend-kde.cpp  globalshortcutsbackend-macos.mm  globalshortcutsbackend-mate.cpp  globalshortcutsmanager.cpp  globalshortcutsmanager.h
src/lyrics/: CMakeLists.txt
src/macstartup/: CMakeLists.txt
src/main/: application.cpp  main.cpp  mainwindow.cpp
src/mimedata/: CMakeLists.txt
src/moodbar/: CMakeLists.txt  moodbarbuilder.cpp  moodbarcontroller.cpp  moodbarpipeline.cpp  moodbarpipeline.h
src/mpris2/: CMakeLists.txt  mpris2.cpp
src/musicbrainz/: CMakeLists.txt
src/organize/: CMakeLists.txt
src/osd/: CMakeLists.txt  osdpretty.cpp
src/player/: CMakeLists.txt
src/playlist/: CMakeLists.txt  playlist.cpp  playlistitemmimedata.h  playlisttabbar.cpp  playlistview.cpp  songloaderinserter.cpp
src/playlistparsers/: CMakeLists.txt
src/providers/: CMakeLists.txt
src/qobuz/: CMakeLists.txt
src/queue/: CMakeLists.txt
src/radios/: CMakeLists.txt  radiomimedata.h  radioview.cpp  radioviewcontainer.h
src/scrobbler/: CMakeLists.txt
src/settings/: CMakeLists.txt  backendsettingspage.cpp  behavioursettingspage.cpp  settingsdialog.cpp
src/smartplaylists/: CMakeLists.txt  playlistgeneratormimedata.h  smartplaylistsview.cpp  smartplaylistsviewcontainer.cpp
src/songloader/: CMakeLists.txt
src/spotify/: CMakeLists.txt
src/streaming/: CMakeLists.txt  streamingcollectionview.cpp  streamingcollectionviewcontainer.h  streamingsearchmodel.cpp  streamingsearchview.cpp  streamingsongsview.h  streamingtabsview.h  streamsongmimedata.h
src/subsonic/: CMakeLists.txt
src/systemtrayicon/: CMakeLists.txt  macsystemtrayicon.mm
src/tagreader/: CMakeLists.txt
src/tidal/: CMakeLists.txt
src/transcoder/: CMakeLists.txt  transcodedialog.cpp  transcoderoptionsaac.cpp  transcoderoptionsasf.cpp  transcoderoptionsdialog.cpp  transcoderoptionsflac.cpp  transcoderoptionsmp3.cpp  transcoderoptionsopus.cpp  transcoderoptionsspeex.cpp  transcoderoptionsvorbis.cpp  transcoderoptionswavpack.cpp
src/translations/: strawberry_is_IS.ts  translations.pot
src/utilities/: CMakeLists.txt
src/widgets/: CMakeLists.txt  autoexpandingtreeview.cpp  loginstatewidget.cpp
tests/: CMakeLists.txt
tests/src/: metatypes_env.h
