configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.h.in ${CMAKE_CURRENT_BINARY_DIR}/version.h)

add_subdirectory(utilities)
add_subdirectory(core)
add_subdirectory(mimedata)
add_subdirectory(osd)
add_subdirectory(tagreader)
add_subdirectory(widgets)
add_subdirectory(dialogs)
add_subdirectory(engine)
add_subdirectory(lyrics)
add_subdirectory(filterparser)
add_subdirectory(analyzer)
add_subdirectory(transcoder)
add_subdirectory(collection)
add_subdirectory(playlist)
add_subdirectory(playlistparsers)
add_subdirectory(equalizer)
add_subdirectory(edittagdialog)
add_subdirectory(smartplaylists)
add_subdirectory(settings)
add_subdirectory(device)
add_subdirectory(covermanager)
add_subdirectory(fileview)
add_subdirectory(player)
add_subdirectory(radios)
add_subdirectory(streaming)
add_subdirectory(scrobbler)
add_subdirectory(organize)
add_subdirectory(context)
add_subdirectory(queue)
add_subdirectory(providers)
add_subdirectory(songloader)
add_subdirectory(systemtrayicon)

if(HAVE_MUSICBRAINZ)
  add_subdirectory(musicbrainz)
endif()

if(HAVE_GLOBALSHORTCUTS)
  add_subdirectory(globalshortcuts)
endif()

if(HAVE_MOODBAR)
  add_subdirectory(moodbar)
endif()

if(HAVE_MPRIS2)
  add_subdirectory(mpris2)
endif()

if(HAVE_SUBSONIC)
  add_subdirectory(subsonic)
endif()

if(HAVE_TIDAL)
  add_subdirectory(tidal)
endif()

if(HAVE_SPOTIFY)
  add_subdirectory(spotify)
endif()

if(HAVE_QOBUZ)
  add_subdirectory(qobuz)
endif()

if(APPLE)
  add_subdirectory(macstartup)
endif()
